==> Skptak/FreeRTOS/FreeRTOS/Demo/PIC18_MPLAB/ParTest/ParTest.c <==
/*
 * FreeRTOS V202212.00
 * Copyright (C) 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of
 * this software and associated documentation files (the "Software"), to deal in
 * the Software without restriction, including without limitation the rights to
 * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
 * the Software, and to permit persons to whom the Software is furnished to do so,
 * subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
 * FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
 * COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
 * IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 * CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 *
 * https://www.FreeRTOS.org
 * https://github.com/FreeRTOS
 *
 */

/*
 * Changes from V2.0.0
 *
 + Use scheduler suspends in place of critical sections.
 */

#include "FreeRTOS.h"
#include "task.h"
#include "partest.h"

/*-----------------------------------------------------------
 * Simple parallel port IO routines for the FED 40pin demo board.
 * The four LED's are connected to D4 to D7.
 *-----------------------------------------------------------*/

#define partstBIT_AS_OUTPUT        ( ( unsigned short ) 0 )
#define partstSET_OUTPUT           ( ( unsigned short ) 1 )
#define partstCLEAR_OUTPUT         ( ( unsigned short ) 0 )

#define partstENABLE_GENERAL_IO    ( ( unsigned char ) 7 )

/*-----------------------------------------------------------*/

void vParTestInitialise( void )
{
    /* Set the top four bits of port D to output. */
    TRISDbits.TRISD7 = partstBIT_AS_OUTPUT;
    TRISDbits.TRISD6 = partstBIT_AS_OUTPUT;
    TRISDbits.TRISD5 = partstBIT_AS_OUTPUT;
    TRISDbits.TRISD4 = partstBIT_AS_OUTPUT;

    /* Start with all bits off. */
    PORTDbits.RD7 = partstCLEAR_OUTPUT;
    PORTDbits.RD6 = partstCLEAR_OUTPUT;
    PORTDbits.RD5 = partstCLEAR_OUTPUT;
    PORTDbits.RD4 = partstCLEAR_OUTPUT;

    /* Enable the driver. */
    ADCON1 = partstENABLE_GENERAL_IO;
    TRISEbits.TRISE2 = partstBIT_AS_OUTPUT;
    PORTEbits.RE2 = partstSET_OUTPUT;
}
/*-----------------------------------------------------------*/

void vParTestSetLED( unsigned portBASE_TYPE uxLED,
                     portBASE_TYPE xValue )
{
    /* We are only using the top nibble, so LED 0 corresponds to bit 4. */
    vTaskSuspendAll();
    {
        switch( uxLED )
        {
            case 3:
                PORTDbits.RD7 = ( short ) xValue;
                break;

            case 2:
                PORTDbits.RD6 = ( short ) xValue;
                break;

            case 1:
                PORTDbits.RD5 = ( short ) xValue;
                break;

            case 0:
                PORTDbits.RD4 = ( short ) xValue;
                break;

            default: /* There are only 4 LED's. */
                break;
        }
    }
    xTaskResumeAll();
}
/*-----------------------------------------------------------*/

void vParTestToggleLED( unsigned portBASE_TYPE uxLED )
{
    /* We are only using the top nibble, so LED 0 corresponds to bit 4. */
    vTaskSuspendAll();
    {
        switch( uxLED )
        {
            case 3:
                PORTDbits.RD7 = !( PORTDbits.RD7 );
                break;

            case 2:
                PORTDbits.RD6 = !( PORTDbits.RD6 );
                break;

            case 1:
                PORTDbits.RD5 = !( PORTDbits.RD5 );
                break;

            case 0:
                PORTDbits.RD4 = !( PORTDbits.RD4 );
                break;

            default: /* There are only 4 LED's. */
                break;
        }
    }
    xTaskResumeAll();
}
